chore: more security fixes

--- a/.env.example
+++ b/.env.example
@@ -9,6 +9,10 @@ NUXT_OAUTH_GITHUB_CLIENT_SECRET=
 NUXT_JWT_PRIVATE_KEY=
 NUXT_JWT_PUBLIC_KEY=
 
+# GitHub scope (optional, defaults to public_repo)
+# Use comma-separated values for multiple scopes, e.g. "repo" for full private repo access
+# GITHUB_SCOPE=public_repo
+
 # Turso Database (for production)
 TURSO_DATABASE_URL=
 TURSO_AUTH_TOKEN=
